--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       }
     
       .content {
-         background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url("./sample/img/showcase.jpg");
+         background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url("bg.jpg");
          background-position: center;
          background-size: cover;
          width: 100%;
@@ -191,7 +191,7 @@
     }
     .contact{
        width: 100%;
-       background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url("./sample/img/showcase.jpg");
+       background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)),url("bg.jpg");
        background-position: center;
        background-size: cover;
        flex-direction: column;
